Fix margin issues in Articles, default dark mode

--- a/src/components/Styles/Articles.css
+++ b/src/components/Styles/Articles.css
@@ -2,8 +2,11 @@
 
 .articles-intro {
   font-weight: 500;
-  font-size: 18px;
-  margin-bottom: 40px;
+  font-size: 16px;
+}
+
+.article-div {
+  margin: 20px 0px 20px 0px;
 }
 
 .blog-reference {
@@ -15,35 +18,26 @@
   color: inherit;
 }
 
-.article-default {
+.article-contents {
+  padding: 15px 20px;
   width: 100%;
   background-color: rgb(250, 250, 230);
-  width: 100%;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.35);
   border-radius: 1rem;
 }
 
-.article-default {
-  margin-bottom: 25px;
-}
-
-.article-contents {
-  padding: 19px 25px 19px 25px;
-}
-
 .article-title {
-  font-size: 18px;
-  line-height: 22px;
-  margin-bottom: 6px;
+  font-size: 16px;
+  line-height: 12px;
 }
 
 .article-subtitle {
-  font-size: 16px;
-  line-height: 22px;
+  font-size: 14px;
+  line-height: 12px;
 }
 
 .article-date {
   color: #a0a0a0;
   font-size: 12px;
-  line-height: 28px;
+  line-height: 12px;
 }
